## Process this file with automake to produce Makefile.in


bin_PROGRAMS =  \
	titania

titania_SOURCES =  \
	Titania/Base/X3DBaseInterface.cpp \
	Titania/Base/X3DDialogInterface.cpp \
	Titania/Base/X3DEditorObject.cpp \
	Titania/Base/X3DUserInterface.cpp \
	Titania/Browser/BrowserHistory.cpp \
	Titania/Browser/BrowserSelection.cpp \
	Titania/Browser/BrowserWindow.cpp \
	Titania/Browser/MagicImport.cpp \
	Titania/Browser/RecentView.cpp \
	Titania/Browser/X3DBrowserEditor.cpp \
	Titania/Browser/X3DBrowserWidget.cpp \
	Titania/Browser/X3DBrowserWindow.cpp \
	Titania/Browser/X3DObjectOperations.cpp \
	Titania/ComposedWidgets/Cairo.cpp \
	Titania/Configuration/config.cpp \
	Titania/Configuration/Configuration.cpp \
	Titania/Dialogs/FileImportDialog/FileImportDialog.cpp \
	Titania/Dialogs/FileOpenDialog/FileOpenDialog.cpp \
	Titania/Dialogs/FileSaveDialog/FileSaveDialog.cpp \
	Titania/Dialogs/FileSaveWarningDialog/FileSaveWarningDialog.cpp \
	Titania/Dialogs/NodeIndex/NodeIndex.cpp \
	Titania/Dialogs/OpenLocationDialog/OpenLocationDialog.cpp \
	Titania/Editors/AppearanceEditor/AppearanceEditor.cpp \
	Titania/Editors/AppearanceEditor/X3DFillPropertiesEditor.cpp \
	Titania/Editors/AppearanceEditor/X3DLinePropertiesEditor.cpp \
	Titania/Editors/AppearanceEditor/X3DMaterialEditor.cpp \
	Titania/Editors/AppearanceEditor/X3DMaterialPaletteEditor.cpp \
	Titania/Editors/ColorPerVertexEditor/ColorPerVertexEditor.cpp \
	Titania/Editors/FaceSelection.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DArc2DEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DArcClose2DEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DCircle2DEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DDisk2DEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DRectangle2DEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DBoxEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DConeEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DCylinderEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DExtrusionEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/GeometryPropertiesEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/X3DPrimitiveCountEditor.cpp \
	Titania/Editors/GridEditor/AngleTool.cpp \
	Titania/Editors/GridEditor/GridEditor.cpp \
	Titania/Editors/GridEditor/GridTool.cpp \
	Titania/Editors/GridEditor/X3DAngleEditor.cpp \
	Titania/Editors/GridEditor/X3DGridEditor.cpp \
	Titania/Editors/GridEditor/X3DGridTool.cpp \
	Titania/Editors/InlineEditor/InlineEditor.cpp \
	Titania/Editors/LayerEditor/LayerEditor.cpp \
	Titania/Editors/LightEditor/LightEditor.cpp \
	Titania/Editors/LightEditor/X3DDirectionalLightEditor.cpp \
	Titania/Editors/LightEditor/X3DPointLightEditor.cpp \
	Titania/Editors/LightEditor/X3DSpotLightEditor.cpp \
	Titania/Editors/LODEditor/LODEditor.cpp \
	Titania/Editors/LODEditor/X3DLODEditor.cpp \
	Titania/Editors/MotionBlurEditor/MotionBlurEditor.cpp \
	Titania/Editors/NavigationInfoEditor/NavigationInfoEditor.cpp \
	Titania/Editors/NodePropertiesEditor/NodePropertiesEditor.cpp \
	Titania/Editors/NodePropertiesEditor/X3DExportedNodesEditor.cpp \
	Titania/Editors/NodePropertiesEditor/X3DImportedNodesEditor.cpp \
	Titania/Editors/NodePropertiesEditor/X3DUserDefinedFieldsEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/PrecisionPlacementPanel.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DBillboardEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DGeoLocationEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DGeoTransformEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DLayoutEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DTransformEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DViewportEditor.cpp \
	Titania/Editors/PrototypeEditor/PrototypeEditor.cpp \
	Titania/Editors/ScenePropertiesEditor/ScenePropertiesEditor.cpp \
	Titania/Editors/ScenePropertiesEditor/X3DUnitEditor.cpp \
	Titania/Editors/TextEditor/TextEditor.cpp \
	Titania/Editors/TextEditor/X3DFontStyleNodeEditor.cpp \
	Titania/Editors/TextureCoordinateEditor/TextureCoordinateEditor.cpp \
	Titania/Editors/TextureEditor/TextureEditor.cpp \
	Titania/Editors/TextureEditor/X3DImageTextureEditor.cpp \
	Titania/Editors/TextureEditor/X3DMovieTextureEditor.cpp \
	Titania/Editors/TextureEditor/X3DPixelTextureEditor.cpp \
	Titania/Editors/TextureEditor/X3DTexture2DNodeEditor.cpp \
	Titania/Editors/TextureEditor/X3DTextureCoordinateGeneratorEditor.cpp \
	Titania/Editors/TextureEditor/X3DTextureNodeEditor.cpp \
	Titania/Editors/TextureEditor/X3DTexturePaletteEditor.cpp \
	Titania/Editors/TextureEditor/X3DTexturePropertiesEditor.cpp \
	Titania/Editors/TextureEditor/X3DTextureTransformEditor.cpp \
	Titania/Editors/TextureEditor/X3DTextureTransformNodeEditor.cpp \
	Titania/Editors/ViewpointEditor/ViewpointEditor.cpp \
	Titania/Editors/ViewpointEditor/X3DGeoViewpointEditor.cpp \
	Titania/Editors/ViewpointEditor/X3DOrthoViewpointEditor.cpp \
	Titania/Editors/ViewpointEditor/X3DViewpointEditor.cpp \
	Titania/main.cpp \
	Titania/UserInterfaces/X3DAnimationEditorInterface.cpp \
	Titania/UserInterfaces/X3DAppearanceEditorInterface.cpp \
	Titania/UserInterfaces/X3DBrowserWindowInterface.cpp \
	Titania/UserInterfaces/X3DColorPerVertexEditorInterface.cpp \
	Titania/UserInterfaces/X3DConsoleInterface.cpp \
	Titania/UserInterfaces/X3DFileImportDialogInterface.cpp \
	Titania/UserInterfaces/X3DFileOpenDialogInterface.cpp \
	Titania/UserInterfaces/X3DFileSaveDialogInterface.cpp \
	Titania/UserInterfaces/X3DFileSaveWarningDialogInterface.cpp \
	Titania/UserInterfaces/X3DGeometryPropertiesEditorInterface.cpp \
	Titania/UserInterfaces/X3DGridEditorInterface.cpp \
	Titania/UserInterfaces/X3DHistoryViewInterface.cpp \
	Titania/UserInterfaces/X3DInlineEditorInterface.cpp \
	Titania/UserInterfaces/X3DLayerEditorInterface.cpp \
	Titania/UserInterfaces/X3DLibraryViewInterface.cpp \
	Titania/UserInterfaces/X3DLightEditorInterface.cpp \
	Titania/UserInterfaces/X3DLODEditorInterface.cpp \
	Titania/UserInterfaces/X3DMotionBlurEditorInterface.cpp \
	Titania/UserInterfaces/X3DNavigationInfoEditorInterface.cpp \
	Titania/UserInterfaces/X3DNodeIndexInterface.cpp \
	Titania/UserInterfaces/X3DNodePropertiesEditorInterface.cpp \
	Titania/UserInterfaces/X3DOpenLocationDialogInterface.cpp \
	Titania/UserInterfaces/X3DOutlineEditorInterface.cpp \
	Titania/UserInterfaces/X3DPrecisionPlacementPanelInterface.cpp \
	Titania/UserInterfaces/X3DPrototypeEditorInterface.cpp \
	Titania/UserInterfaces/X3DScenePropertiesEditorInterface.cpp \
	Titania/UserInterfaces/X3DScriptEditorInterface.cpp \
	Titania/UserInterfaces/X3DTextEditorInterface.cpp \
	Titania/UserInterfaces/X3DTextureCoordinateEditorInterface.cpp \
	Titania/UserInterfaces/X3DTextureEditorInterface.cpp \
	Titania/UserInterfaces/X3DViewpointEditorInterface.cpp \
	Titania/UserInterfaces/X3DViewpointListInterface.cpp \
	Titania/Widgets/AnimationEditor/AnimationEditor.cpp \
	Titania/Widgets/Console/Console.cpp \
	Titania/Widgets/HistoryView/History.cpp \
	Titania/Widgets/HistoryView/HistoryView.cpp \
	Titania/Widgets/LibraryView/LibraryView.cpp \
	Titania/Widgets/OutlineEditor/CellRenderer/OutlineCellRenderer.cpp \
	Titania/Widgets/OutlineEditor/CellRenderer/OutlineFields.cpp \
	Titania/Widgets/OutlineEditor/CellRenderer/OutlineSeparator.cpp \
	Titania/Widgets/OutlineEditor/CellRenderer/TextViewEditable.cpp \
	Titania/Widgets/OutlineEditor/CellRenderer/X3DTextViewEditable.cpp \
	Titania/Widgets/OutlineEditor/OutlineDragDrop.cpp \
	Titania/Widgets/OutlineEditor/OutlineEditor.cpp \
	Titania/Widgets/OutlineEditor/OutlineRouteGraph.cpp \
	Titania/Widgets/OutlineEditor/OutlineSelection.cpp \
	Titania/Widgets/OutlineEditor/OutlineTreeData.cpp \
	Titania/Widgets/OutlineEditor/OutlineTreeModel.cpp \
	Titania/Widgets/OutlineEditor/OutlineTreeObserver.cpp \
	Titania/Widgets/OutlineEditor/OutlineTreeViewEditor.cpp \
	Titania/Widgets/OutlineEditor/X3DOutlineTreeView.cpp \
	Titania/Widgets/ScriptEditor/ScriptEditor.cpp \
	Titania/Widgets/ScriptEditor/X3DScriptEditor.cpp \
	Titania/Widgets/ScriptEditor/X3DScriptEditorPreferences.cpp \
	Titania/Widgets/ScriptEditor/X3DScriptEditorSearch.cpp \
	Titania/Widgets/ScriptEditor/X3DShaderPartEditor.cpp \
	Titania/Widgets/ViewpointList/ViewpointList.cpp

titania_LDADD = $(TITANIA_LIBS) \
	$(TITANIA_GZSTREAM_LIBS) \
	$(TITANIA_OPENGL_SURFACE_LIBS) \
	$(TITANIA_SQLITE_LIBS) \
	$(TITANIA_STANDARD_LIBS) \
	$(TITANIA_STREAM_LIBS) \
	$(TITANIA_X3D_LIBS)  \
	$(top_builddir)/libtitania-x3d/libtitania-x3d.la \
	$(top_builddir)/libtitania-gzstream/libtitania-gzstream.la \
	$(top_builddir)/libtitania-opengl-surface/libtitania-opengl-surface.la \
	$(top_builddir)/libtitania-sqlite/libtitania-sqlite.la \
	$(top_builddir)/libtitania-standard/libtitania-standard.la \
	$(top_builddir)/libtitania-stream/libtitania-stream.la

AM_CPPFLAGS = $(TITANIA_CFLAGS) \
	$(TITANIA_GZSTREAM_CFLAGS) \
	$(TITANIA_OPENGL_SURFACE_CFLAGS) \
	$(TITANIA_SQLITE_CFLAGS) \
	$(TITANIA_STANDARD_CFLAGS) \
	$(TITANIA_STREAM_CFLAGS) \
	$(TITANIA_X3D_CFLAGS)  \
	-I$(top_builddir)/libtitania-x3d \
	-I$(top_builddir)/libtitania-gzstream \
	-I$(top_builddir)/libtitania-opengl-surface \
	-I$(top_builddir)/libtitania-sqlite \
	-I$(top_builddir)/libtitania-standard \
	-I$(top_builddir)/libtitania-stream

install-exec-hook:
	cp -r share/ $(prefix)/
	find $(prefix)/share/titania/ -type d -exec chmod 755 {} \;
	find $(prefix)/share/titania/ -type f -exec chmod 644 {} \;

run:
	$(builddir)/run.pl 2>&1 | $(builddir)/../miscellaneous/benchmarks/save.pl
