## Process this file with automake to produce Makefile.in


bin_PROGRAMS =  \
	titania

titania_SOURCES =  \
	Titania/Applications/BrowserApplication/BrowserApplication.cpp \
	Titania/Applications/BrowserApplication/X3DBrowserApplication.cpp \
	Titania/Applications/BrowserApplication/X3DDBusInterface.cpp \
	Titania/Applications/main/main.cpp \
	Titania/Base/X3DBaseInterface.cpp \
	Titania/Base/X3DDialogInterface.cpp \
	Titania/Base/X3DEditorInterface.cpp \
	Titania/Base/X3DEditorObject.cpp \
	Titania/Base/X3DPanelInterface.cpp \
	Titania/Base/X3DRevealerInterface.cpp \
	Titania/Base/X3DUserInterface.cpp \
	Titania/Bits/Cairo.cpp \
	Titania/Bits/File.cpp \
	Titania/Bits/Pipe.cpp \
	Titania/Bits/String.cpp \
	Titania/Browser/BrowserSelection.cpp \
	Titania/Browser/BrowserWindow.cpp \
	Titania/Browser/IconFactory.cpp \
	Titania/Browser/MagicImport.cpp \
	Titania/Browser/RecentView.cpp \
	Titania/Browser/X3DBrowserEditor.cpp \
	Titania/Browser/X3DBrowserNotebook.cpp \
	Titania/Browser/X3DBrowserWindow.cpp \
	Titania/BrowserNotebook/BrowserPanel/BrowserPanel.cpp \
	Titania/BrowserNotebook/BrowserPanel/ViewpointObserver.cpp \
	Titania/BrowserNotebook/BrowserPanel/X3DBrowserPanel.cpp \
	Titania/BrowserNotebook/BrowserPanel/X3DBrowserPanelMenuBar.cpp \
	Titania/BrowserNotebook/NotebookPage/NotebookPage.cpp \
	Titania/BrowserNotebook/NotebookPage/X3DNotebookPage.cpp \
	Titania/BrowserNotebook/PanelMenu/PanelMenu.cpp \
	Titania/BrowserNotebook/RenderPanel/RenderPanel.cpp \
	Titania/BrowserNotebook/RenderPanel/RenderThread.cpp \
	Titania/BrowserNotebook/RenderPanel/VideoEncoder.cpp \
	Titania/BrowserNotebook/RenderPanel/X3DRenderPanel.cpp \
	Titania/ComposedWidgets/BackgroundTool.cpp \
	Titania/ComposedWidgets/EulerAdjustment.cpp \
	Titania/ComposedWidgets/GradientTool.cpp \
	Titania/ComposedWidgets/MFColorButton.cpp \
	Titania/ComposedWidgets/MFColorRGBAButton.cpp \
	Titania/ComposedWidgets/MFStringComboBoxText.cpp \
	Titania/ComposedWidgets/MFStringEntry.cpp \
	Titania/ComposedWidgets/MFStringGeoSystem.cpp \
	Titania/ComposedWidgets/MFStringTextView.cpp \
	Titania/ComposedWidgets/MFStringURLEntry.cpp \
	Titania/ComposedWidgets/MFStringURLWidget.cpp \
	Titania/ComposedWidgets/NameEntry.cpp \
	Titania/ComposedWidgets/NormalTool.cpp \
	Titania/ComposedWidgets/RangeTool.cpp \
	Titania/ComposedWidgets/RotationTool.cpp \
	Titania/ComposedWidgets/SFColorButton.cpp \
	Titania/ComposedWidgets/SFColorRGBAButton.cpp \
	Titania/ComposedWidgets/SFRotationAdjustment.cpp \
	Titania/ComposedWidgets/SFStringComboBoxText.cpp \
	Titania/ComposedWidgets/SFStringEntry.cpp \
	Titania/ComposedWidgets/SFStringTextView.cpp \
	Titania/ComposedWidgets/TexturePreview.cpp \
	Titania/ComposedWidgets/X3DGradientTool.cpp \
	Titania/ComposedWidgets/X3DMFStringEntry.cpp \
	Titania/ComposedWidgets/X3DMFStringWidget.cpp \
	Titania/Configuration/config.cpp \
	Titania/Configuration/Configuration.cpp \
	Titania/Dialogs/FileOpenDialog/FileImportAsExternProtoDialog.cpp \
	Titania/Dialogs/FileOpenDialog/FileOpenDialog.cpp \
	Titania/Dialogs/FileOpenDialog/FileOpenFontDialog.cpp \
	Titania/Dialogs/FileOpenDialog/OpenFolderDialog.cpp \
	Titania/Dialogs/FileOpenDialog/X3DFileOpenDialog.cpp \
	Titania/Dialogs/FileSaveDialog/FileExportDialog.cpp \
	Titania/Dialogs/FileSaveDialog/FileExportImageDialog.cpp \
	Titania/Dialogs/FileSaveDialog/FileExportProtoDialog.cpp \
	Titania/Dialogs/FileSaveDialog/FileSaveACopyDialog.cpp \
	Titania/Dialogs/FileSaveDialog/FileSaveDialog.cpp \
	Titania/Dialogs/FileSaveDialog/FileSaveVideoDialog.cpp \
	Titania/Dialogs/FileSaveDialog/X3DBaseFileSaveDialog.cpp \
	Titania/Dialogs/FileSaveDialog/X3DFileSaveDialog.cpp \
	Titania/Dialogs/FileSaveWarningDialog/FileSaveWarningDialog.cpp \
	Titania/Dialogs/FontChooserDialog/FontChooserDialog.cpp \
	Titania/Dialogs/MessageDialog/MessageDialog.cpp \
	Titania/Dialogs/OpenLocationDialog/OpenLocationDialog.cpp \
	Titania/Editors/AppearanceEditor/AppearanceEditor.cpp \
	Titania/Editors/AppearanceEditor/X3DBlendModeEditor.cpp \
	Titania/Editors/AppearanceEditor/X3DFillPropertiesEditor.cpp \
	Titania/Editors/AppearanceEditor/X3DLinePropertiesEditor.cpp \
	Titania/Editors/AppearanceEditor/X3DMaterialEditor.cpp \
	Titania/Editors/AppearanceEditor/X3DMaterialPaletteEditor.cpp \
	Titania/Editors/AppearanceEditor/X3DUsedMaterialsEditor.cpp \
	Titania/Editors/BackgroundEditor/BackgroundEditor.cpp \
	Titania/Editors/BackgroundEditor/X3DBackgroundEditor.cpp \
	Titania/Editors/BackgroundImageEditor/BackgroundImage.cpp \
	Titania/Editors/BackgroundImageEditor/BackgroundImageEditor.cpp \
	Titania/Editors/BindableNodeEditor/BindableNodeEditor.cpp \
	Titania/Editors/BindableNodeList/BackgroundList.cpp \
	Titania/Editors/BindableNodeList/FogList.cpp \
	Titania/Editors/BindableNodeList/NavigationInfoList.cpp \
	Titania/Editors/BindableNodeList/ViewpointList.cpp \
	Titania/Editors/BrowserSizeEditor/BrowserSizeEditor.cpp \
	Titania/Editors/ExternalToolsEditor/ExternalTool.cpp \
	Titania/Editors/ExternalToolsEditor/ExternalToolsEditor.cpp \
	Titania/Editors/ExternalToolsEditor/X3DExternalToolsEditor.cpp \
	Titania/Editors/FilesEditor/FilesEditor.cpp \
	Titania/Editors/FogEditor/FogEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DArc2DEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DArcClose2DEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DCircle2DEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DDisk2DEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DRectangle2DEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DBoxEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DConeEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DCylinderEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DElevationGridEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DExtrusionEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DSphereEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/GeometryPropertiesEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Geospatial/X3DGeoElevationGridEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/NURBS/X3DNurbsCurveEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/NURBS/X3DNurbsPatchSurfaceEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/NURBS/X3DNurbsTrimmedSurfaceEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/Rendering/X3DIndexedLineSetEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/X3DColorNodeEditor.cpp \
	Titania/Editors/GeometryPropertiesEditor/X3DGeometryTool.cpp \
	Titania/Editors/GeometryPropertiesEditor/X3DPrimitiveCountEditor.cpp \
	Titania/Editors/GridEditor/AngleGridTool.cpp \
	Titania/Editors/GridEditor/AxonometricGridTool.cpp \
	Titania/Editors/GridEditor/GridEditor.cpp \
	Titania/Editors/GridEditor/GridTool.cpp \
	Titania/Editors/GridEditor/X3DAngleEditor.cpp \
	Titania/Editors/GridEditor/X3DAxonometricGridEditor.cpp \
	Titania/Editors/GridEditor/X3DGridEditor.cpp \
	Titania/Editors/GridEditor/X3DGridTool.cpp \
	Titania/Editors/HistoryEditor/History.cpp \
	Titania/Editors/HistoryEditor/HistoryEditor.cpp \
	Titania/Editors/InlineEditor/InlineEditor.cpp \
	Titania/Editors/LayerEditor/LayerEditor.cpp \
	Titania/Editors/LibraryView/LibraryView.cpp \
	Titania/Editors/LightEditor/LightEditor.cpp \
	Titania/Editors/LightEditor/X3DDirectionalLightEditor.cpp \
	Titania/Editors/LightEditor/X3DPointLightEditor.cpp \
	Titania/Editors/LightEditor/X3DSpotLightEditor.cpp \
	Titania/Editors/ModelsPalette/ModelsPalette.cpp \
	Titania/Editors/MotionBlurEditor/MotionBlurEditor.cpp \
	Titania/Editors/NavigationInfoEditor/NavigationInfoEditor.cpp \
	Titania/Editors/NodeEditor/NodeEditor.cpp \
	Titania/Editors/NodeIndex/NodeIndex.cpp \
	Titania/Editors/NodePropertiesEditor/NodePropertiesEditor.cpp \
	Titania/Editors/NodePropertiesEditor/X3DExportedNodesEditor.cpp \
	Titania/Editors/NodePropertiesEditor/X3DImportedNodesEditor.cpp \
	Titania/Editors/NodePropertiesEditor/X3DUserDefinedFieldsEditor.cpp \
	Titania/Editors/PolygonColoringEditor/PolygonColoringEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/ParticleEmitter/X3DConeEmitterEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/ParticleEmitter/X3DExplosionEmitterEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/ParticleEmitter/X3DPointEmitterEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/ParticleEmitter/X3DPolylineEmitterEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/ParticleEmitter/X3DVolumeEmitterEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/ParticleSystem/DefaultPhysicsModelEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/ParticleSystem/ForcePhysicsModelEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/ParticleSystem/WindPhysicsModelEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/ParticleSystem/X3DColorRampNodeEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/ParticleSystem/X3DParticlePhysicsModelNodeEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/ParticleSystem/X3DParticlePhysicsModelNodeInterface.cpp \
	Titania/Editors/PrecisionPlacementPanel/PrecisionPlacementPanel.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DBillboardEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DCollisionEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DEnvironmentalSensorEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DGeoLocationEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DGeometrySelectionEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DGeoTransformEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DLayoutEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DLODEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DParticleEmitterNodeEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DParticleSystemEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DSwitchEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DTransformEditor.cpp \
	Titania/Editors/PrecisionPlacementPanel/X3DViewportEditor.cpp \
	Titania/Editors/ProjectsEditor/FileView.cpp \
	Titania/Editors/ProjectsEditor/OpenEditorsEditor.cpp \
	Titania/Editors/ProjectsEditor/ProjectEditor.cpp \
	Titania/Editors/ProjectsEditor/ProjectsEditor.cpp \
	Titania/Editors/PrototypeEditor/PrototypeEditor.cpp \
	Titania/Editors/ScenePropertiesEditor/ScenePropertiesEditor.cpp \
	Titania/Editors/ScenePropertiesEditor/X3DMetaDataEditor.cpp \
	Titania/Editors/ScenePropertiesEditor/X3DProfileComponentsEditor.cpp \
	Titania/Editors/ScenePropertiesEditor/X3DUnitEditor.cpp \
	Titania/Editors/ScenePropertiesEditor/X3DWorldInfoEditor.cpp \
	Titania/Editors/SculpToolEditor/SculpToolEditor.cpp \
	Titania/Editors/SculpToolEditor/X3DSculpToolBrushEditor.cpp \
	Titania/Editors/SculpToolEditor/X3DSculpToolBrushPaletteEditor.cpp \
	Titania/Editors/SoundEditor/SoundEditor.cpp \
	Titania/Editors/SoundEditor/X3DSoundSourceNodeEditor.cpp \
	Titania/Editors/TextEditor/TextEditor.cpp \
	Titania/Editors/TextEditor/X3DFontStyleNodeEditor.cpp \
	Titania/Editors/TextureEditor/TextureEditor.cpp \
	Titania/Editors/TextureEditor/X3DComposedCubeMapTextureEditor.cpp \
	Titania/Editors/TextureEditor/X3DComposedTexture3DEditor.cpp \
	Titania/Editors/TextureEditor/X3DEnvironmentTextureNodeEditor.cpp \
	Titania/Editors/TextureEditor/X3DGeneratedCubeMapTextureEditor.cpp \
	Titania/Editors/TextureEditor/X3DImageCubeMapTextureEditor.cpp \
	Titania/Editors/TextureEditor/X3DImageTexture3DEditor.cpp \
	Titania/Editors/TextureEditor/X3DImageTextureEditor.cpp \
	Titania/Editors/TextureEditor/X3DMovieTextureEditor.cpp \
	Titania/Editors/TextureEditor/X3DMultiTextureEditor.cpp \
	Titania/Editors/TextureEditor/X3DPixelTexture3DEditor.cpp \
	Titania/Editors/TextureEditor/X3DPixelTextureEditor.cpp \
	Titania/Editors/TextureEditor/X3DTexture2DNodeEditor.cpp \
	Titania/Editors/TextureEditor/X3DTexture3DNodeEditor.cpp \
	Titania/Editors/TextureEditor/X3DTextureCoordinateGeneratorEditor.cpp \
	Titania/Editors/TextureEditor/X3DTextureNodeEditor.cpp \
	Titania/Editors/TextureEditor/X3DTexturePaletteEditor.cpp \
	Titania/Editors/TextureEditor/X3DTexturePropertiesEditor.cpp \
	Titania/Editors/TextureEditor/X3DTextureTransform3DEditor.cpp \
	Titania/Editors/TextureEditor/X3DTextureTransformEditor.cpp \
	Titania/Editors/TextureEditor/X3DTextureTransformMatrix3DEditor.cpp \
	Titania/Editors/TextureEditor/X3DTextureTransformNodeEditor.cpp \
	Titania/Editors/TextureEditor/X3DUsedTexturesEditor.cpp \
	Titania/Editors/TextureMappingEditor/TextureMappingEditor.cpp \
	Titania/Editors/UndoHistoryEditor/UndoHistoryEditor.cpp \
	Titania/Editors/ViewpointEditor/ViewpointEditor.cpp \
	Titania/Editors/ViewpointEditor/X3DGeoViewpointEditor.cpp \
	Titania/Editors/ViewpointEditor/X3DOrthoViewpointEditor.cpp \
	Titania/Editors/ViewpointEditor/X3DViewpointEditor.cpp \
	Titania/Revealer/GeometryEditor/GeometryEditor.cpp \
	Titania/UserInterfaces/X3DAnimationEditorInterface.cpp \
	Titania/UserInterfaces/X3DAppearanceEditorInterface.cpp \
	Titania/UserInterfaces/X3DBackgroundEditorInterface.cpp \
	Titania/UserInterfaces/X3DBackgroundImageEditorInterface.cpp \
	Titania/UserInterfaces/X3DBackgroundSizeEditorInterface.cpp \
	Titania/UserInterfaces/X3DBindableNodeEditorInterface.cpp \
	Titania/UserInterfaces/X3DBindableNodeListInterface.cpp \
	Titania/UserInterfaces/X3DBrowserPanelInterface.cpp \
	Titania/UserInterfaces/X3DBrowserSizeEditorInterface.cpp \
	Titania/UserInterfaces/X3DBrowserWindowInterface.cpp \
	Titania/UserInterfaces/X3DConsoleInterface.cpp \
	Titania/UserInterfaces/X3DDefaultPhysicsModelEditorInterface.cpp \
	Titania/UserInterfaces/X3DExternalToolsEditorInterface.cpp \
	Titania/UserInterfaces/X3DFileOpenDialogInterface.cpp \
	Titania/UserInterfaces/X3DFileSaveDialogInterface.cpp \
	Titania/UserInterfaces/X3DFileSaveWarningDialogInterface.cpp \
	Titania/UserInterfaces/X3DFilesEditorInterface.cpp \
	Titania/UserInterfaces/X3DFogEditorInterface.cpp \
	Titania/UserInterfaces/X3DFontChooserDialogInterface.cpp \
	Titania/UserInterfaces/X3DFooterInterface.cpp \
	Titania/UserInterfaces/X3DForcePhysicsModelEditorInterface.cpp \
	Titania/UserInterfaces/X3DGeometryEditorInterface.cpp \
	Titania/UserInterfaces/X3DGeometryPropertiesEditorInterface.cpp \
	Titania/UserInterfaces/X3DGridEditorInterface.cpp \
	Titania/UserInterfaces/X3DHistoryEditorInterface.cpp \
	Titania/UserInterfaces/X3DInlineEditorInterface.cpp \
	Titania/UserInterfaces/X3DLayerEditorInterface.cpp \
	Titania/UserInterfaces/X3DLibraryViewInterface.cpp \
	Titania/UserInterfaces/X3DLightEditorInterface.cpp \
	Titania/UserInterfaces/X3DMessageDialogInterface.cpp \
	Titania/UserInterfaces/X3DModelsPaletteInterface.cpp \
	Titania/UserInterfaces/X3DMotionBlurEditorInterface.cpp \
	Titania/UserInterfaces/X3DNavigationInfoEditorInterface.cpp \
	Titania/UserInterfaces/X3DNodeEditorInterface.cpp \
	Titania/UserInterfaces/X3DNodeIndexInterface.cpp \
	Titania/UserInterfaces/X3DNodePropertiesEditorInterface.cpp \
	Titania/UserInterfaces/X3DNotebookPageInterface.cpp \
	Titania/UserInterfaces/X3DOpenEditorsEditorInterface.cpp \
	Titania/UserInterfaces/X3DOpenLocationDialogInterface.cpp \
	Titania/UserInterfaces/X3DOutlineEditorInterface.cpp \
	Titania/UserInterfaces/X3DPanelMenuInterface.cpp \
	Titania/UserInterfaces/X3DPolygonColoringEditorInterface.cpp \
	Titania/UserInterfaces/X3DPrecisionPlacementPanelInterface.cpp \
	Titania/UserInterfaces/X3DProjectEditorInterface.cpp \
	Titania/UserInterfaces/X3DProjectsEditorInterface.cpp \
	Titania/UserInterfaces/X3DPrototypeEditorInterface.cpp \
	Titania/UserInterfaces/X3DRenderPanelInterface.cpp \
	Titania/UserInterfaces/X3DRouteGraphInterface.cpp \
	Titania/UserInterfaces/X3DRouteGraphPageInterface.cpp \
	Titania/UserInterfaces/X3DScenePropertiesEditorInterface.cpp \
	Titania/UserInterfaces/X3DScriptEditorInterface.cpp \
	Titania/UserInterfaces/X3DSculpToolEditorInterface.cpp \
	Titania/UserInterfaces/X3DSidebarInterface.cpp \
	Titania/UserInterfaces/X3DSoundEditorInterface.cpp \
	Titania/UserInterfaces/X3DTextEditorInterface.cpp \
	Titania/UserInterfaces/X3DTextureEditorInterface.cpp \
	Titania/UserInterfaces/X3DTextureMappingEditorInterface.cpp \
	Titania/UserInterfaces/X3DUndoHistoryEditorInterface.cpp \
	Titania/UserInterfaces/X3DViewpointEditorInterface.cpp \
	Titania/UserInterfaces/X3DWindPhysicsModelEditorInterface.cpp \
	Titania/Widgets/AnimationEditor/AnimationEditor.cpp \
	Titania/Widgets/Console/Console.cpp \
	Titania/Widgets/Console/X3DConsole.cpp \
	Titania/Widgets/Footer/Footer.cpp \
	Titania/Widgets/OutlineEditor/CellRenderer/OutlineCellRenderer.cpp \
	Titania/Widgets/OutlineEditor/CellRenderer/OutlineFields.cpp \
	Titania/Widgets/OutlineEditor/CellRenderer/OutlineSeparator.cpp \
	Titania/Widgets/OutlineEditor/CellRenderer/TextViewEditable.cpp \
	Titania/Widgets/OutlineEditor/CellRenderer/X3DTextViewEditable.cpp \
	Titania/Widgets/OutlineEditor/OutlineDragDrop.cpp \
	Titania/Widgets/OutlineEditor/OutlineEditor.cpp \
	Titania/Widgets/OutlineEditor/OutlineEditorDatabase.cpp \
	Titania/Widgets/OutlineEditor/OutlineRouteGraph.cpp \
	Titania/Widgets/OutlineEditor/OutlineSelection.cpp \
	Titania/Widgets/OutlineEditor/OutlineTreeData.cpp \
	Titania/Widgets/OutlineEditor/OutlineTreeModel.cpp \
	Titania/Widgets/OutlineEditor/OutlineTreeObserver.cpp \
	Titania/Widgets/OutlineEditor/OutlineTreeViewEditor.cpp \
	Titania/Widgets/OutlineEditor/X3DOutlineTreeView.cpp \
	Titania/Widgets/RouteGraph/RouteGraph.cpp \
	Titania/Widgets/RouteGraph/RouteGraphNode.cpp \
	Titania/Widgets/RouteGraph/RouteGraphPage.cpp \
	Titania/Widgets/RouteGraph/X3DRouteGraph.cpp \
	Titania/Widgets/RouteGraph/X3DRouteGraphPage.cpp \
	Titania/Widgets/ScriptEditor/ScriptEditor.cpp \
	Titania/Widgets/ScriptEditor/X3DScriptEditor.cpp \
	Titania/Widgets/ScriptEditor/X3DScriptEditorPreferences.cpp \
	Titania/Widgets/ScriptEditor/X3DScriptEditorSearch.cpp \
	Titania/Widgets/ScriptEditor/X3DScriptNodeEditor.cpp \
	Titania/Widgets/ScriptEditor/X3DShaderEditor.cpp \
	Titania/Widgets/Sidebar/Sidebar.cpp

titania_LDADD = $(TITANIA_LIBS) \
	$(TITANIA_GZSTREAM_LIBS) \
	$(TITANIA_SQLITE_LIBS) \
	$(TITANIA_STANDARD_LIBS) \
	$(TITANIA_STREAM_LIBS) \
	$(TITANIA_FTGL_LIBS) \
	$(TITANIA_X3D_LIBS)  \
	$(top_builddir)/libtitania-x3d/libtitania-x3d.la \
	$(top_builddir)/libtitania-ftgl/libtitania-ftgl.la \
	$(top_builddir)/libtitania-sqlite/libtitania-sqlite.la \
	$(top_builddir)/libtitania-standard/libtitania-standard.la \
	$(top_builddir)/libtitania-stream/libtitania-stream.la

AM_CPPFLAGS = $(TITANIA_CFLAGS) \
	$(TITANIA_GZSTREAM_CFLAGS) \
	$(TITANIA_SQLITE_CFLAGS) \
	$(TITANIA_STANDARD_CFLAGS) \
	$(TITANIA_STREAM_CFLAGS) \
	$(TITANIA_FTGL_CFLAGS) \
	$(TITANIA_X3D_CFLAGS)  \
	-I$(top_builddir)/libtitania-x3d \
	-I$(top_builddir)/libtitania-ftgl \
	-I$(top_builddir)/libtitania-sqlite \
	-I$(top_builddir)/libtitania-standard \
	-I$(top_builddir)/libtitania-stream

AM_LDFLAGS="-lX11"

install-exec-hook:
	mkdir -m 755 -p $(DESTDIR)$(datadir)
	cp -r share/* $(DESTDIR)$(datadir)
	find $(DESTDIR)$(datadir)/titania/ -type d -exec chmod 755 {} \;
	find $(DESTDIR)$(datadir)/titania/ -type f -exec chmod 644 {} \;

run:
	$(builddir)/run.pl 2>&1
